--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,13 @@
     --placeholder: #BBBBBB;
 }
 
+.container {
+    width: 972px;
+    padding: 0 15px;
+    margin: 0 auto;
+}
+
+
 body {
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
@@ -22,12 +29,36 @@ a {
     text-decoration: none;
 }
 
+ul,
+p,
+h1,
+h4 {
+    margin: 0;
+    padding: 0;
+}
+
+.header {
+    padding-top: 44px;
+    padding-bottom: 91px;
+}
+
+.header .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .logo {
     font-family: 'Bilbo Swash Caps', serif;
     color: var(--main-accent);
     font-size: 36px;
     line-height: 1.14;
     letter-spacing: 1.30px;
+}
+
+.nav-list {
+    display: flex;
+    gap: 10px;
 }
 
 .nav-list-link {
@@ -38,6 +69,10 @@ a {
 
 }
 
+.main .container {
+    padding-bottom: 119px;
+}
+
 .main-title {
     color: var(--project-black);
     font-size: 40px;
@@ -45,6 +80,13 @@ a {
     text-transform: uppercase;
     line-height: 1.87;
     text-align: center;
+    margin-bottom: 87px;
+}
+
+.main-list {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
 }
 
 .main-list-title {
@@ -62,6 +104,10 @@ a {
     text-align: center;
 }
 
+.footer .container {
+    padding: 92px 15px 115px;
+}
+
 .footer {
     background-color: var(--project-black);
 }
@@ -73,9 +119,20 @@ a {
     text-align: center;
 }
 
+.footer-inputs {
+    display: flex;
+    flex-direction: column;
+    height: 214px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 28px;
+    margin-bottom: 27px;
+}
+
 .form-input {
     width: 455px;
     height: 50px;
+    padding: 13px 21px 23px;
 }
 
 .form-input,
@@ -91,6 +148,7 @@ a {
     width: 455px;
     height: 212px;
     resize: none;
+    padding: 14px 22px;
 }
 
 .form-btn-submit {
@@ -103,4 +161,6 @@ a {
     font-weight: 700;
     text-transform: uppercase;
     border: none;
+    display: block;
+    margin: 0 auto;
 }
