--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,18 @@ h4 {
     font-size: 14px;
     text-transform: uppercase;
     line-height: 1.14;
+    position: relative;
 
+}
+.nav-list-link:hover::after {
+    content: '';
+    display: inline-block;
+    width: 100%;
+    height: 3px;
+    background-color: #FED136;
+    position: absolute;
+    top: 30px;
+    left: 0;
 }
 
 .main .container {
@@ -87,7 +98,33 @@ h4 {
     display: flex;
     align-items: flex-start;
     justify-content: center;
+    gap: 56px;
 }
+.main-list-item::before {
+    content: '';
+    display: block;
+    background-color:white;
+    background-position: center;
+    background-repeat: no-repeat;
+    border: 3px solid #FED136;
+    width: 70px;
+    height: 70px;
+    margin: 0 auto;
+    border-radius: 50%;
+}
+.main-list-item:nth-child(1)::before {
+    background-image: url("../img/img3.svg");
+
+}
+.main-list-item:nth-child(2)::before {
+    background-image: url("../img/img2.svg");
+
+}
+.main-list-item:nth-child(3)::before {
+    background-image: url("../img/img1.svg");
+
+}
+
 
 .main-list-title {
     color: var(--project-black);
